--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": false,
+  "private": true,
   "name": "excalidraw-monorepo",
   "packageManager": "yarn@1.22.22",
   "workspaces": [
@@ -90,8 +90,7 @@
     "prerelease:excalidraw": "node scripts/prerelease.js",
     "build:preview": "yarn build && vite preview --port 5000",
     "release:excalidraw": "node scripts/release.js",
-    "deploy": "gh-pages -d build",
-    "predeploy": "yarn build"
+    "deploy": "gh-pages -d build"
   },
   "description": "<a href=\"https://excalidraw.com/\" target=\"_blank\" rel=\"noopener\">   <picture>     <source media=\"(prefers-color-scheme: dark)\" alt=\"Excalidraw\" srcset=\"https://excalidraw.nyc3.cdn.digitaloceanspaces.com/github/excalidraw_github_cover_2_dark.png\" />     <img alt=\"Excalidraw\" src=\"https://excalidraw.nyc3.cdn.digitaloceanspaces.com/github/excalidraw_github_cover_2.png\" />   </picture> </a>",
   "version": "1.0.0",
@@ -101,5 +100,5 @@
   },
   "author": "xsq <1805992019@qq.com>",
   "license": "ISC",
-  "repository": "https://github.com/excalidraw/excalidraw"
+  "repository": "https://github.com/xsq01/xsq01.github.io.git"
 }
